# SIN-Code

./: .gitignore  .gitignore.doc.md  .golangci.yml  .goreleaser.yaml  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.delegate  ECOSYSTEM.md  EVAL_OBSERVABILITY.md  INSTALL.md  INTEGRATION_SUMMARY.md  ISSUES.md  MASTER_TODO.md  Makefile  PLAN_CICD.md  PLAN_FORGE.md  PLAN_MCP_SERVERS.md  PLAN_OPENCODE_JSON.md  PLAN_README.md  PLAN_UNIT_TESTS.md  README.md  SECURITY.md  benchmark.sh  benchmark.sh.doc.md  debug_query.py  go.mod  go.sum  install.sh  install.sh.doc.md  pyproject.toml  quick_bench_sckg.py  requirements-ecosystem.txt  uninstall.sh  uninstall.sh.doc.md  update.sh  update.sh.doc.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ceo-audit.yml  ci.yml  ecosystem-sync.yml  go-ci.yml  lint.yml  release-python.yml  release.yml  sin-code-release.yml  sin-update-e2e.yml  sin-verify.yml  test-delegate.yml
.opencode/plugin/: package.json  sin.ts
.sin/commands/: security-review.md
Formula/: sin-code.rb
SIN-Code-Architectural-Debt-Watchdogs/: CONTRIBUTING.md  INSTALL.md  README.md  pyproject.toml
SIN-Code-Architectural-Debt-Watchdogs/docs/: CONFIGURATION.md  USAGE.md
SIN-Code-Architectural-Debt-Watchdogs/src/sin_code_adw/: __init__.py  circuit_breaker.py  cli.py  complexity.py  cost_tracker.py  daemon.py
SIN-Code-Architectural-Debt-Watchdogs/tests/: test_complexity.py
SIN-Code-Bundle/: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md
SIN-Code-Bundle/examples/: codex-config.toml  hermes-config.yaml  opencode.json
SIN-Code-Bundle/tests/: test_bundle.py  test_generators.py  test_gitnexus.py  test_markitdown.py
SIN-Code-Container-Tool-Go/: README.md  go.mod  sin-container-go
SIN-Code-Container-Tool-Go/tests/: scanner_test.go
SIN-Code-Intent-Based-Diffing/tests/: test_ast_diff.py
SIN-Code-Proof-of-Correctness/tests/: test_property.py
SIN-Code-SAST-Tool/: README.md  go.mod  setup.sh
SIN-Code-SBOM-Generator/: README.md  pyproject.toml
SIN-Code-SBOM-Generator-Go/: README.md  go.mod  sin-sbom-go
SIN-Code-SBOM-Generator-Go/tests/: generator_test.go
SIN-Code-SBOM-Generator/src/sbom_generator/: __init__.py  cli.doc.md  cli.py  cyclonedx_generator.doc.md  cyclonedx_generator.py  generator.doc.md  generator.py  models.doc.md  models.py  sbom_generator.doc.md  spdx_generator.doc.md  spdx_generator.py
SIN-Code-SBOM-Generator/tests/: test_cyclonedx.doc.md  test_cyclonedx.py  test_generator.doc.md  test_generator.py  test_spdx.doc.md  test_spdx.py
SIN-Code-SCA-Tool-Go/: README.md  go.mod
SIN-Code-SCA-Tool-Go/tests/: scanner_test.go
SIN-Code-Secrets-Scanner/: README.md  go.mod  setup.sh
SIN-Code-Semantic-Codebase-Knowledge-Graphs/: CONTRIBUTING.md  INSTALL.md  README.md  config.yaml  pyproject.toml
SIN-Code-Semantic-Codebase-Knowledge-Graphs/docs/: CONFIGURATION.md  USAGE.md
SIN-Code-Semantic-Codebase-Knowledge-Graphs/src/sin_code_sckg/: __init__.py  cli.py  graph.py  mcp_server.py  parser.py
SIN-Code-Semantic-Codebase-Knowledge-Graphs/tests/: test_parser.py
SIN-Code-Verification-Oracle/: CONTRIBUTING.md  INSTALL.md  README.md  pyproject.toml
SIN-Code-Verification-Oracle/docs/: CONFIGURATION.md  USAGE.md
SIN-Code-Verification-Oracle/examples/: suite.example.json
SIN-Code-Verification-Oracle/examples/workspaces/fix-add-bug/: solution.py  test_add.py
SIN-Code-Verification-Oracle/src/sin_code_oracle/: __init__.py  cli.py  diagnostics.py  eval_harness.py  execution.py  mcp_server.py  oracle.py  trace_diff.py
SIN-Code-Verification-Oracle/tests/: test_oracle.py
benchmark_results/: benchmark_brain_results.json  benchmark_bundle_results.json  benchmark_discover_results.json  benchmark_execute_results.json  benchmark_report.md  benchmark_sckg_results.json
benchmarks/: benchmark_brain.py  benchmark_bundle.py  benchmark_discover.py  benchmark_execute.py  benchmark_sckg.py
desktop/: .gitignore  README.md  desktop.doc.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: CODOCS.md  CONFIGURATION.md  EXPLAINED-pypi-trusted-publisher.md  EXPLAINED-stale-bulk-deploy-tags.md  EXPLAINED.md  EXTERNAL_TOOLS.md  GITNEXUS.md  HOOKS.md  USAGE.md  WEBUI.md  bubbletea-v2-migration.md  competitive-analysis-odysseus.md  lsp-known-issues.md  mcp.json.example  plugin-system-design.md  rate-limiting-design.md  sin-todo-v2-design.md  skill-audit-matrix.md  tui-v2-design.md
evals/: critical.json
examples/: plan.example.json
homebrew/: sin-code.rb
profiles/: fireworks.toml  qwen-relay.toml
scripts/: adr-ci.sh  check_consistency.py  dev_install.sh  marketplace-install.sh.doc.md  marketplace-list.sh.doc.md  marketplace-remove.sh.doc.md  marketplace-search.sh.doc.md  marketplace-sync.sh.doc.md  marketplace-update.sh.doc.md  run_all_tests.sh
skills/: add-endpoint.md  safe-refactor.md
src/sin_delegate/: README.md  TUTORIAL.md  __init__.py  __main__.py  _version.py  analytics.py  budget_governor.py  cli.py  doctor.py  engine.py  escalation.py  ledger.py  mcp_tools.py  memory.py  models.py  multirepo.py  multirepo_engine.py  observe.py  planfile.py  planner.py  policy.py  pyproject.toml  resolution.py  runner.py  scheduler.py  verify.py  worktree.py
tests/: test_agent_integration.py  test_bench.py  test_bench_delegate.py  test_budget.py  test_bundle.py  test_codocs.py  test_consistency.py  test_delegate.py  test_developer_cli.doc.md  test_developer_cli.py  test_gitignore_tui_sin_code.py  test_gitnexus.py  test_hooks.doc.md  test_hooks.py  test_integration_e2e.py  test_intelligence_multirepo.py  test_lsp_backend.py  test_markitdown.py  test_mcp_integration.doc.md  test_mcp_integration.py  test_mcp_serve.py  test_memory.py  test_multirepo_saga.py  test_policy.py  test_pypi_setup.doc.md  test_pypi_setup.py  test_rtk.py  test_scheduler_properties.py  test_security_audit_bundle.py  test_serve.py  test_sin_code.doc.md  test_sin_code.py  test_skills.py  test_update.py  test_v2_features.doc.md  test_v2_features.py
tools/: setup_pypi_publisher.doc.md  setup_pypi_publisher.sh
(+834 files in other folders)
