[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sin-code-bundle"
version = "0.9.2"
description = "Structural intelligence for AI coding agents: impact analysis, semantic diff, architectural-debt breaker, and an independent verification Oracle — over MCP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "OpenSIN-Code" }]
keywords = ["mcp", "ai-agents", "coding-agent", "opencode", "codex", "lsp", "swe-bench"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]

# One-line install: bundles every SIN-Code subsystem + sin-brain.
# `pip install sin-code-bundle[all]` == full SOTA agent stack.
# Editable paths are tried first (for dev) — PyPI fallback is documented in
# scripts/install-all.sh.
dependencies = [
  "typer>=0.12",
  "pyyaml>=6.0",
]

# === ECOSYSTEM PACKAGES (file:// deps) ===
# The 9 SIN-Code ecosystem packages (sin-code-sckg, sin-code-ibd, etc.) are
# installed via `requirements-ecosystem.txt` for local dev — PyPI's core-metadata
# spec forbids direct URL references (file://) in extras.
# See https://packaging.python.org/specifications/core-metadata

[project.optional-dependencies]
# === LSP / benchmark / MCP runtime / observability ===
# Full tree-sitter stack — NO tree-sitter-languages (no Py3.14 wheels).
# Direct bindings: tree-sitter + 4 per-language parsers (Py/JS/TS/Go).
# tree-sitter 0.23+ uses new API: tree_sitter.Language(lang_fn()), not Language(ptr).
lsp = [
  "multilspy>=0.0.10",
  "tree-sitter>=0.23",
  "tree-sitter-python>=0.23",
  "tree-sitter-javascript>=0.23",
  "tree-sitter-typescript>=0.23",
  "tree-sitter-go>=0.23",
]
bench = [
  "datasets>=2.19",
]
mcp = [
  "mcp[cli]>=1.2",
]
otel = [
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp>=1.25",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

# === PyPI-clean: all available extras ===
# `pip install sin-code-bundle[all]` → lsp + bench + mcp + otel + dev
# For the 9 SIN-Code ecosystem packages (sckg, ibd, poc, efsm, adw, oracle,
# orchestration, review, sin-brain), install with:
#   pip install -r https://raw.githubusercontent.com/OpenSIN-Code/SIN-Code-Bundle/main/requirements-ecosystem.txt
all = [
  "sin-code-bundle[lsp,bench,mcp,otel,dev]",
]

[project.urls]
Homepage = "https://github.com/OpenSIN-Code/SIN-Code-Bundle"
Issues = "https://github.com/OpenSIN-Code/SIN-Code-Bundle/issues"

[project.scripts]
sin = "sin_code_bundle.cli:app"
sin-serve = "sin_code_bundle.mcp_server:main"
sin-serve-mcp = "sin_code_bundle.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sin_code_bundle = ["data/codocs/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
# CoDocs example fixtures demonstrate doc co-location, not runnable code.
extend-exclude = ["examples", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
