[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sin-sbom-generator"
version = "1.0.0"
description = "SIN-Code SBOM Generator - SPDX and CycloneDX format support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpenSIN-Code", email = "dev@opensin-code.org"}
]
keywords = ["sbom", "spdx", "cyclonedx", "security", "supply-chain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
sin-sbom = "sbom_generator.cli:main"

[project.urls]
Homepage = "https://github.com/OpenSIN-Code/SIN-Code-SBOM-Generator"
Repository = "https://github.com/OpenSIN-Code/SIN-Code-SBOM-Generator"
Issues = "https://github.com/OpenSIN-Code/SIN-Code-SBOM-Generator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sbom_generator = ["templates/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
