[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sin-code-sckg"
version = "0.1.0"
description = "Semantic Codebase Knowledge Graph for AI Agents"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.22,<0.24",
    "tree-sitter-python>=0.23,<0.24",
    "tree-sitter-javascript>=0.23,<0.24",
    "tree-sitter-typescript>=0.23,<0.24",
    "networkx>=3.2",
    "gitpython>=3.1.40",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "pydantic>=2.5",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
test = ["pytest>=8.0"]

[project.scripts]
sckg = "sin_code_sckg.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
